--- a/_publications/2016_chem.md
+++ b/_publications/2016_chem.md
@@ -2,13 +2,13 @@
 title: "Computational Screening of All Stoichiometric Inorganic Materials"
 collection: publications
 permalink: /publication/2016_chem
-excerpt: 'This is the first paper using SMACT. We enumerated all 2- 3- and 4-component ingorganic compositions up to a stoichiometric limit of 8. We also presented some potential use cases involving chalcohalides and perovskites.'
-date: 2016-10-01
+excerpt: 'This is the first paper using SMACT. We enumerated all 2- 3- and 4-component ingorganic compositions up to a stoichiometric limit of 8.'
+date: 2016-10-13
 venue: 'Chem'
 paperurl: 'http://dandavies99.github.io/files/2016_chem.pdf'
-citation: 'D W Davies et al. &quot;Computational Screening of All Stochiometric Inorganic Materials.&quot; <i>Chem</i>. 1 (2016).'
+citation: 'D W Davies et al. &quot;Computational Screening of All Stochiometric Inorganic Materials.&quot; <i>Chem</i>, 1 (2016).'
 ---
-This is the first paper using SMACT. We enumerated all 2- 3- and 4-component ingorganic compositions up to a stoichiometric limit of 8. We also presented some          potential use cases involving chalcohalides and perovskites.
+This is the first paper using [SMACT](http://github.com/wmd-group/smact). We enumerated all 2- 3- and 4-component ingorganic compositions up to a stoichiometric limit of 8. We also presented some potential use cases involving chalcohalides and perovskites.
 
 [Download paper here](http://dandavies99.github.io/files/2016_chem.pdf)
 
