--- a/_publications/2020_jcp.md
+++ b/_publications/2020_jcp.md
@@ -14,4 +14,4 @@ The code to reproduce the results in this paper is [available here](https://gith
 
 ![toc](../images/jcp_fig.png)
 
-[Download paper here](http://dandavies99.github.io/files/2020_jcp.pdf)j
+[Download paper here](http://dandavies99.github.io/files/2020_jcp.pdf)
