--- a/_publications/2020_jmca.md
+++ b/_publications/2020_jmca.md
@@ -10,4 +10,4 @@ citation: 'Z Li et al., &quot;Bandgap lowering in mixed alloys of Cs2Ag(SbxBi1âˆ
 ---
 Working with experimental researchers at Imperial College London, we investigate the dependence of band gap on the value of x in Cs2Ag(SbxBi1âˆ’x)Br6.
 
-[Download paper here](http://dandavies99.github.io/files/2020_jmca.pdf)j
+[Download paper here](http://dandavies99.github.io/files/2020_jmca.pdf)
