--- a/_publications/2019_jpcc.md
+++ b/_publications/2019_jpcc.md
@@ -12,4 +12,4 @@ A joint experimental -- computational study in which indium 5s lone pairs are id
 
 ![toc](../images/jpcc_toc.gif)
 
-[Download paper here](http://dandavies99.github.io/files/2019_jpcc.pdf)j
+[Download paper here](http://dandavies99.github.io/files/2019_jpcc.pdf)
